--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,9 +48,9 @@ services:
     networks:
       - micro-network
     depends_on:
-      - db
+      - postgresql
 
-  db:
+  postgresql:
     image: postgres
     restart: always
     environment:
