--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,7 +50,7 @@ services:
     depends_on:
       - postgresql
 
-  postgresql:
+  postgres:
     image: postgres
     restart: always
     environment:
